Share code in FormAssociatedElement by resetting the form owner whenever insertedIntoTree is called https://bugs.webkit.org/show_bug.cgi?id=81160

Reviewed by Kent Tamura.

Source/WebCore:

The only difference between the previous insertedIntoTree method and
resetFormOwner was a missing element->inDocument() check in the
former. But that check is actually important, as seen by the included test case.

Test: fast/forms/form-attribute-not-in-document.html

* html/FormAssociatedElement.cpp:
(WebCore::FormAssociatedElement::insertedIntoTree):

LayoutTests:

* fast/forms/form-attribute-not-in-document-expected.txt: Added.
* fast/forms/form-attribute-not-in-document.html: Added.


Canonical link: https://commits.webkit.org/98479@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@110918 268f45cc-cd09-0410-ab3c-d52691b4dbfc